policy/checkov/azurerm/NSGRulePortAccessRestricted.azapi.mock.json
{
    "mock" : {
        "default": {
            "resource_changes": [{
                "address": "azurerm_network_security_group.example",
                "mode": "managed",
                "type": "azapi_resource",
                "change": {
                    "actions": [
                        "create"
                    ],
                    "after": {
                        "type": "Microsoft.Network/networkSecurityGroups@2024-05-01",
                        "body": {
                            "properties": {
                                "securityRules": [{
                                    "name": "allow_https",
                                    "properties": {
                                        "access": "Allow",
                                        "destinationAddressPrefix": "*",
                                        "destinationPortRange": "443",
                                        "direction": "Inbound",
                                        "protocol": "Tcp",
                                        "sourceAddressPrefix": "*",
                                        "sourcePortRange": "*"
                                    }
                                }, {
                                    "name": "allow_ssh",
                                    "properties": {
                                        "access": "Deny",
                                        "destinationAddressPrefix": "*",
                                        "destinationPortRange": "22",
                                        "direction": "Inbound",
                                        "protocol": "Tcp",
                                        "sourceAddressPrefix": "10.0.0.0/24",
                                        "sourcePortRange": "*"
                                    }
                                }, {
                                    "name": "allow_http",
                                    "properties": {
                                        "access": "Allow",
                                        "destinationAddressPrefix": "*",
                                        "destinationPortRange": "80",
                                        "direction": "Inbound",
                                        "protocol": "Tcp",
                                        "sourceAddressPrefix": "*",
                                        "sourcePortRange": "*"
                                    }
                                }]
                            }
                        }
                    }
                }
            }]
        }
    }
}
